syntax = "proto3";

option go_package = "./producer/grpc/proto";

package proto;

service MyService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}